clusters/homelab/infrastructure/adguard/service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns
  namespace: adguard
  labels:
    app.kubernetes.io/name: adguard-home
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: adguard-home
  ports:
    - name: dns-tcp
      port: 53
      targetPort: dns-tcp
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: dns-udp
      protocol: UDP
