clusters/homelab/infrastructure/adguard/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-web
  namespace: adguard
  labels:
    app.kubernetes.io/name: adguard-home
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: adguard-home
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
