clusters/homelab/infrastructure/adguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-home
  namespace: adguard
  annotations:
    cert-manager.io/cluster-issuer: home-arpa-ca
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: AdGuard Home
    gethomepage.dev/description: DNS ad-blocking
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: adguard-home
    gethomepage.dev/href: https://adguard.home.arpa
spec:
  ingressClassName: traefik
  rules:
    - host: adguard.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard-web
                port:
                  number: 3000
  tls:
    - hosts:
        - adguard.home.arpa
      secretName: adguard-home-arpa-tls
